[package]
name = "time-tactician"
description = "time-management smart contract"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/SteelBlueRose/smart-contract-time-tactician"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.13.5-rust-1.85.1"
image_digest = "sha256:3b0272ecdbb91465f3e7348330d7f2d031d27901f26fb25b4eaf1560a60c20f3"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
near-sdk = { version = "5.6", features = ["legacy"] }
borsh = { version = "1.5.1", features = ["unstable__schema"] }
schemars = { version = "0.8.12", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
near-sdk = { version = "5.6", features = ["unit-testing"] }
near-workspaces = { version = "0.16", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
